fix: resolve SCSS import warnings

--- a/src/components/cart/index.scss
+++ b/src/components/cart/index.scss
@@ -1,5 +1,5 @@
-@import "cart-counter.scss";
-@import "cart-form.scss";
-@import "cart-product.scss";
-@import "cart-buttons.scss";
-@import "mobile";
+@use "cart-counter.scss";
+@use "cart-form.scss";
+@use "cart-product.scss";
+@use "cart-buttons.scss";
+@use "mobile";
